<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tippoifiltrare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tippoistring"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tippoifiltrare"
        android:entries="@array/tipuripoi" />

    <TextView
        android:id="@+id/distantapoifiltrare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tippoifiltrare"
        android:text="@string/Distantatxt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_toRightOf="@+id/distantapoifiltrare"
        android:entries="@array/distantepoi" />

    <Button
        android:id="@+id/anuleazafiltrarepoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/distantapoifiltrare"
        android:text="@string/anuleazastring" />

    <Button
        android:id="@+id/executafiltrarepoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/distantapoifiltrare"
        android:text="@string/filtreazastring" />

</RelativeLayout>