<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tippoifiltrareaugmentat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tippoistring"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp" />

    <Spinner
        android:id="@+id/spinnertippoiaugmentat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tippoifiltrareaugmentat"
        android:entries="@array/tipuripoi" />

    <Button
        android:id="@+id/executafiltrarepoiaugmentat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/filtreazastring" />

    <Button
        android:id="@+id/anuleazafiltrarepoiaugmentat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/anuleazastring" />

</RelativeLayout>