<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:scrollbars="vertical" android:weightSum="1">
  <RelativeLayout android:layout_width="fill_parent" android:id="@+id/relativeLayout1" android:layout_height="36dp">

      <TextView
          android:id="@+id/existatxt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:text="@string/existastring"
          android:textAppearance="?android:attr/textAppearanceLarge" />

      <TextView
          android:id="@+id/countpoitxt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_toRightOf="@+id/existatxt"
          android:text="@string/valoare"
          android:textAppearance="?android:attr/textAppearanceLarge" />

      <TextView
          android:id="@+id/poitxt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_toRightOf="@+id/countpoitxt"
          android:text="@string/POI"
          android:textAppearance="?android:attr/textAppearanceLarge" />

      <TextView
          android:id="@+id/inapropierepoitxt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_toRightOf="@+id/poitxt"
          android:text="@string/inapropierestring"
          android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </RelativeLayout>
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" android:layout_height="wrap_content" 
    android:orientation="vertical" android:scrollbars="vertical" android:layout_weight="0.99"> 
    <LinearLayout android:id="@+id/linearLayout1" android:orientation="vertical" android:layout_weight="0.99" android:layout_width="fill_parent" android:layout_height="fill_parent">
    </LinearLayout>
    </ScrollView>
    <RelativeLayout android:layout_width="fill_parent" android:id="@+id/relativeLayout2" android:layout_height="36dp">
        
    </RelativeLayout>
  			  
</LinearLayout>