<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/POIBUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:src="@android:drawable/ic_menu_myplaces" />

        <ImageButton
            android:id="@+id/INCHIDEBUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/SETARIBUTTON"
            android:src="@android:drawable/ic_lock_power_off" />

        <ImageButton
            android:id="@+id/GPSBUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/POIBUTTON"
            android:layout_marginRight="50dp"
            android:src="@android:drawable/ic_menu_mylocation" />


        <TextView
            android:id="@+id/POITXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/POIBUTTON"
            android:layout_below="@+id/POIBUTTON"
            android:layout_marginRight="14dp"
            android:text="@string/POI"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/GPSTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/GPSBUTTON"
            android:layout_below="@+id/GPSBUTTON"
            android:layout_marginRight="14dp"
            android:text="@string/GPS"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/SETARIBUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_menu_camera" />

        <SlidingDrawer
            android:id="@+id/slidingDrawer1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:content="@+id/content"
            android:handle="@+id/handle" >


            <ImageButton
                android:id="@+id/handle"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@android:drawable/ic_menu_preferences" />

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="201dp"
                android:background="#000"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/sunetavertizare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vedereecran"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ToggleButton
                        android:id="@+id/sunetavertizaretogglebutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ToggleButton"
                        android:textOff="Manual"
                        android:textOn="Automat" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="178dp"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/indicatiisonore"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ToggleButton
                        android:id="@+id/ToggleButton02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ToggleButton"
                        android:textOff="Oprit"
                        android:textOn="Pornit" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/avertizarisonor"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <ToggleButton
                        android:id="@+id/ToggleButton01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ToggleButton" />
                </LinearLayout>
            </LinearLayout>

        </SlidingDrawer>

    </RelativeLayout>